stylesheet.less
/* ... */
.basket-summary-amount,
.basket-summary-subtotal {
	text-align: center;
}

.basket-summary-quantitybtn {
	button.btn {
		padding: 0;
    width: 40px;
    height: 40px;
    text-align: center;
	}
}

.basket-summary-items-column {
	width: 30%;
}

.quantity-number {
	display: inline-block;
	min-width: 40px;
	text-align: center;
}


// Ecommerce Filter Forms
.form-group.productlist-search {
	position: relative;
	float: left;
	margin: 0 0 20px;
	input[type=search] {
		padding-right: 100px;
		box-sizing: border-box;
	}
	button {
		position: absolute;
		right: 0;
		bottom: 10px;
	}
}

label {
	display: inline-block;
	padding-bottom: .4em;
}

select {
	cursor: pointer;
	position: relative;
	padding-right: 33px;
}

select, input[type=search] {
	font-family: @font-swatch5-font-family;
	font-size: @font-swatch5-font-size;
	font-weight: @font-swatch5-font-weight;
	line-height: @font-swatch5-line-height;
	color: @font-swatch5-color;
	letter-spacing: @font-swatch5-letter-spacing;
	text-indent: 0;
	width: 100%;
	padding: 8px 10px 10px;
	outline: none;
	-webkit-transition: border .2s;
	-moz-transition: border .2s;
	-ms-transition: border .2s;
	transition: border .2s;
	border-radius: 0;
	height: 40px;
}

.productlist-item-count {
  clear: both;
}

.productlist-display-form {
	text-align: right;
	input[type=search] {
		margin: 0;
	}
	label {
		vertical-align: bottom;
		text-align: left;
		display: inline-block;
		width: 19%;
	}
	select, input[type=search] {
		width: 80%;
	}
}
.productlist-display-form .form-group {
	width: 100%;
	padding: 0;
}
.form-group.productlist-search button {
	bottom: 0;
	height: 40px;
}


/* ===============================
   IPAD WIDTH
   =============================== */

@media only screen and (max-width: 768px) {


    .widget.companyheaderwrap {
        width: 100%;
        display: block;
        margin: 0 auto;
    }

    /* NAV */


    .widget.extendednavigation {
        display: block;
        width: 100%;
        min-height: 50px;
    }

     /* NAV ICON */

  .widget .extendednavigation a.pull {
    display: block;
    width: 100%;
	   height: 30px;
    position: absolute;
    top: 9px;
  }

    .widget .extendednavigation a.pull:after {
    content:"";
    background: image('/images/nav-icon.png') no-repeat center;
    width: 100%;
    height: 100%;
    display: inline-block;
    position: absolute;
    right: 0;
    top: 0;
  }

  /* NAV */


 .widget .extendednavigation ul {
    width: 100%;
    display: none;
    margin: 0;
    border-bottom: 1px solid lighten(@color-swatch4,40%);
  }

  .widget.extendednavigation ul li {
    border-bottom: 1px solid lighten(@color-swatch4,40%);
  }

   .widget.extendednavigation ul li:last-child {
    border-bottom: 1px solid lighten(@color-swatch4,40%);
  }

  .widget.extendednavigation ul li:hover .text {
    color: @font-swatch6-color-hover;
  }

  .widget.extendednavigation ul li:hover .text {
    color: @font-swatch6-color-hover;
  }

  .widget.extendednavigation ul li:hover,
.widget.extendednavigation ul li.folder:hover {
    color: @font-swatch6-color-hover;
    background-color: @font-swatch6-background-color-hover;
    text-decoration: none;
}

  .widget.extendednavigation ul li.folder {

  }

  .widget .extendednavigation ul li {
    width: 100%;
    padding: 0;
   
  }

  .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
      margin: 0;
  }




  .widget.extendednavigation ul li > ul {
      display: none!important;
  }

  .widget.extendednavigation ul li:hover > ul {
      display: block !important;
      width: 100%;
      position: absolute;
      z-index: 500;
      margin-top: 0;
      background-color: lighten(@color-swatch7,5%);
  }

  .widget.extendednavigation ul li:hover > ul > li {
     border-bottom: 1px solid lighten(@color-swatch4,30%);
  }

  .widget.extendednavigation ul li:hover > ul > li .text {
    color: @font-swatch6-color;
  }

  .widget.extendednavigation ul li:hover > ul > li:hover .text {
    color: @font-swatch6-color-hover;
  }

  .widget.extendednavigation ul li.folder {
    border-radius: 0;
  }

  .widget.extendednavigation ul li:hover > ul li:first-child {
    border-top: none;
  }






    /* FEATURE */

    .widget.feature {
      width: 100%;
    }

    .widget.feature .feature-bgimg {
        height: 300px;
    }

    .widget.feature .content {
        height: 300px;
        padding: 10px 0;
        vertical-align: middle;
    }

    .widget.feature h2 {
        font-size: bkscale(@font-swatch8-font-size,0.8);
        line-height: bkscale(@font-swatch8-line-height,0.8);
    }

    .widget.feature h3 {
        font-size: bkscale(@font-swatch9-font-size,0.8);
        line-height: bkscale(@font-swatch9-line-height,0.8);
    }

    .widget.feature .feature-btn button {
        font-size: bkscale(@font-swatch9-font-size,0.7);
        padding: 15px 17px;
    }

     /* GALLERY */

    .widget.gallery li span.inner .title, .widget.gallery li span.inner .description {
    font-size:bkscale(@font-swatch5-font-size,0.9);
    line-height:bkscale(@font-swatch5-line-height,0.9);
    }

    /* SLIDESHOW */

    .widget.responsiveslideshow .slideshow-image-list,
    .widget.responsiveslideshow .slideshow-widget {
        height:400px;
    }
    .widget .extendednavigation ul li:first-child {
      margin-top:40px;
    }

    .widget .extendednavigation ul li.folder ul li {
      margin-top:0;
    }

    .widget .extendednavigation ul.align-right li.folder:after {
      left: 5px;
      right: inherit;
  }

}
/* ... */

